# backend

./: .git-blame-ignore-revs  .gitignore  README.md  check_models.py  main.py  pyproject.toml  settings.py
alembic/: env.py
auth/: authentication_backend.py  user_manager.py
db/: client.py  model.py  study.py
models/: __init__.py  all_models.py  conclusion_config_model.py  demographics_survey_model.py  enums.py  experiment_config_model.py  experiment_response_model.py  learning_config_model.py  study_config_model.py  study_model.py  study_response_model.py  study_result_model.py  survey_answers_model.py  survey_model_config.py  survey_questions_model.py  uploaded_files_model.py  user_model.py  user_survey_config_model.py  waiting_config_model.py
routers/: study_config_routes.py
routes/: auth_routes.py  experiment_response_router.py  r2_routes.py  researcher_routes.py  staff_routes.py  study_config_routes.py  study_results_router.py  study_retrieval_routes.py  survey_answer_routes.py  user_routes.py
schemas/: const.py  r2_schemas.py  researcher_dashboard_schema.py  staff_schemas.py  study_config_request_schema.py  study_config_response_schema.py  study_config_schema.py  study_response_schema.py  study_results_schema.py  survey_answer_schema.py  user_schemas.py
services/: form_parsers.py  r2_client.py  r2_service.py  researcher_config_services.py  researcher_dashboard_service.py  study.py  study_config_service.py  study_response_service.py  study_results_service.py  study_retrieval_service.py  survey_answer_service.py
tests/: test_add.py
(+78 files in other folders)
